--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
 
-    <title>FreeGo 3 - Proto.io player</title>
+    <title>Foodwise 3 - Proto.io player</title>
 
     
 				<link type="text/css" rel="stylesheet" href="./src/stylesheets/preview-export-min.css">
@@ -18,7 +18,7 @@
         prx.orientations.landscape = 1;
         prx.project = {};
         prx.project.id = '74a9a1e8-ab1e-4e8d-8cc2-0ef67552ecf0';
-        prx.project.title = 'FreeGo 3';
+        prx.project.title = 'Foodwise 3';
         prx.project.version = 0;
         prx.project.livepreview = 0;
         prx.project.account = "alessandropotenza2";
