--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
 		<meta charset="utf-8">
 
-		<title>FreeGo 3 - Proto.io</title>
+		<title>Foodwise 3 - Proto.io</title>
 
 		
 			<meta name="HandheldFriendly" content="True">
